[gd_scene load_steps=9 format=3 uid="uid://bn6vhysq7qdjl"]

[ext_resource type="Texture2D" uid="uid://ctj3808fx5tc" path="res://Tiles/Red_monstr_animation.tres" id="1_0w0l3"]
[ext_resource type="PackedScene" uid="uid://kioyo7ql75rd" path="res://Enemies/Enemy.tscn" id="1_4jpx8"]
[ext_resource type="Script" path="res://Enemies/Red_monster.gd" id="2_4khk4"]
[ext_resource type="Script" path="res://Enemies/RedMonsterAnimation.gd" id="2_rywsx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwjnl"]
radius = 30.0
height = 60.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_uwtu1"]
radius = 72.0
height = 160.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_34slc"]
radius = 50.0
height = 124.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_paifm"]
radius = 50.0
height = 124.0

[node name="Red_monster" instance=ExtResource("1_4jpx8")]
script = ExtResource("2_4khk4")
movement_speed = 60.0
max_health = 10
damage = 1

[node name="animation" parent="." index="0"]
texture = ExtResource("1_0w0l3")
hframes = 8
script = ExtResource("2_rywsx")

[node name="atack_timer" parent="animation" index="1"]
wait_time = 0.13

[node name="Cillision_for_everything" parent="." index="1"]
shape = SubResource("CapsuleShape2D_vwjnl")

[node name="CollisionShape2D" parent="Release_damage" index="0"]
position = Vector2(0, -22)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_uwtu1")

[node name="Damage_cooldown" parent="." index="4"]
wait_time = 0.4

[node name="CollisionShape2D" parent="Take_damage" index="0"]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_34slc")

[node name="Collision" parent="Collision_for_enemies" index="0"]
position = Vector2(0, -22)
shape = SubResource("CapsuleShape2D_paifm")

[connection signal="timeout" from="animation/Timer" to="animation" method="enemy_animation"]
[connection signal="timeout" from="animation/atack_timer" to="animation" method="enemy_atack_animation"]
[connection signal="body_entered" from="Release_damage" to="." method="body_entered"]
[connection signal="body_exited" from="Release_damage" to="." method="body_exited"]
[connection signal="area_entered" from="Take_damage" to="." method="weapon_entered"]
